--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.2",
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
+    "firebase-admin": "^12.0.0",
     "pg": "^8.11.3"
   }
 }
